# trading-aggregator-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yaml
.sqlx/: query-1a64d2682e7c5f3e3de58fd72bd9f727b66aee151c56767cfd373fd4ce6fb6f1.json  query-2c371b52dc34ee61f988ff5a485720a8fa0c96f70277f3dba2adbdccb235eafb.json  query-32c8c7adf1f0513b52236a2d3941dcd92b1531d1013ec166dbeda7531be969c1.json  query-3be5f8e572ccd178db3cdce6e7fd43cab2d81d467b3c6a677db2bef85c0125c7.json  query-530ef3d78184a701eac01039c1ee7d5e77f13e846e8790dee7a2dfed6300eda3.json  query-8a7d29ed3452f9e0fb67312278987031ccb5b9fe9ac78b8055db0d1a3681015c.json  query-97a588f01be3719cab9ed2cade1991c9c25851ea9f9ae74b9aed0a302db1271e.json  query-e946000cd558afe4862e5d40e1658d050e299d8ef1c667e73ff42623db1a5d3a.json  query-f89b387a37a87fda77c1dc563460c19912765193b794be6c309d0ad538b28ab9.json  query-fd74ce63baa100afaa72226f274d701db6f69667a5fbf25fdab2a81cb1789258.json
src/: db.rs  main.rs  report.rs  trade.rs
