[package]
name = "trading-results-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = "1.36.0"
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "rust_decimal",
    "postgres",
    "chrono",               # Remember to change with chrono if I do that
] }
tokio = { version = "1.40.0", features = ["full"] }
dotenvy = "0.15.7"
anyhow = "1.0.89"
strum = "0.26.3"
strum_macros = "0.26.4"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.0"
futures = "0.3.31"
